# talent-acquisition-agent

./: .env.example  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  docker-compose.yml  index.html  index.yaml  job-agent-0.1.tgz  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml  docs.yml  windows-release.yml
0.1/: .buildinfo  12factor.html  api.html  configuration.html  genindex.html  http-routingtable.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
0.1/.doctrees/: 12factor.doctree  api.doctree  configuration.doctree  environment.pickle  installation.doctree  usage.doctree
0.1/_modules/: index.html  server.html  settings.html
0.1/_sources/: usage.rst.txt
0.1/api/: main.html  server.html  settings.html
dev/: .buildinfo  12factor.html  api.html  configuration.html  genindex.html  http-routingtable.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
dev/.doctrees/: environment.pickle  index.doctree  installation.doctree  introduction.doctree  usage.doctree
dev/_modules/: index.html  server.html  settings.html
dev/_sources/: configuration.rst.txt  installation.rst.txt
dev/api/: main.html  server.html  settings.html
doc_build/: .buildinfo  12factor.html  api.html  configuration.html  genindex.html  http-routingtable.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
doc_build/.doctrees/: 12factor.doctree  api.doctree  configuration.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  usage.doctree
doc_build/_modules/: index.html  server.html  settings.html
doc_build/_sources/: introduction.rst.txt  usage.rst.txt
doc_build/api/: main.html  server.html  settings.html
docs/architecture/: index.html
docs/source/: 12factor.rst  api.rst  conf.py  configuration.rst  index.rst  installation.rst  introduction.rst  usage.rst
helm/job-agent/: Chart.yaml  values.yaml
input/: search_criteria.json
k8s/: README.md
k8s/base/: api-deployment.yaml  configmap.yaml  ingress.yaml  mongodb-deployment.yaml  namespace.yaml  network-policy.yaml  search-deployment.yaml  web-deployment.yaml
src/: config.py  main.py  server.py  settings.py
tests/: conftest.py  test_config.py  test_job_search.py  test_main.py  test_notifications.py  test_server.py  test_settings.py  test_tracker.py
windows/: setup.iss
(+74 files in other folders)
