[project]
name = "talent-acquisition-agent"
version = "0.1.0"
description = "Open Source Agentic AI Job Search Engine"
dependencies = [
    "langchain",
    "langchain-community",
    "playwright",
    "motor",
    "sqlalchemy",
    "pandas",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv",
    "aiohttp",
    "beautifulsoup4",
    "twilio",
    "fastapi",
    "uvicorn"
]

[project.optional-dependencies]
dev = ["sphinx", "sphinx-rtd-theme", "myst-parser", "sphinx-multiversion"]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser"]