[project]
name = "talent-acquisition-agent"
version = "0.1.0"
description = "Open Source Agentic AI Job Search Engine"
dependencies = [
    "langchain",
    "langchain-community",
    "playwright",
    "motor",
    "sqlalchemy",
    "pandas",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv",
    "aiohttp",
    "beautifulsoup4",
    "twilio",
    "fastapi",
    "uvicorn"
]

[project.optional-dependencies]
dev = ["sphinx<7.2", "sphinx-rtd-theme", "myst-parser", "sphinxcontrib-httpdomain", "sphinxcontrib-mermaid"]
docs = ["sphinx<7.2", "sphinx-rtd-theme", "myst-parser", "sphinxcontrib-httpdomain", "sphinxcontrib-mermaid"]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.6.0",
]
