[project]
name = "talent-acquisition-agent"
version = "0.1.dev0"
description = "Open Source Agentic AI Job Search Engine"
dependencies = [
    "langchain",
    "langchain-community",
    "playwright",
    "motor",
    "sqlalchemy",
    "pandas",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv",
    "aiohttp",
    "beautifulsoup4",
    "twilio",
    "fastapi",
    "uvicorn"
]

[project.optional-dependencies]
dev = ["sphinx<7.2", "sphinx-rtd-theme", "myst-parser", "sphinxcontrib-httpdomain", "sphinxcontrib-mermaid"]
docs = ["sphinx<7.2", "sphinx-rtd-theme", "myst-parser", "sphinxcontrib-httpdomain", "sphinxcontrib-mermaid"]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "detect-secrets>=1.5.0",
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pip-audit>=2.7.0",
    "pip-licenses>=4.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests/services/api", "tests/services/search"]
addopts = "--cov=services/api --cov=services/search --cov-report=term-missing"
